se crean servicios y controladores

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.servlet.context-path=/best-travel
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/best_travel
 spring.datasource.username=postgres
 spring.datasource.password=1297
