--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,10 @@ spring.datasource.hikari.maximum-pool-size=5
 
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=mateocastro1297@gmail.com
+spring.mail.password=qarlntfgbnutehqj
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
