--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,3 +26,11 @@ services:
       - "80:80"
     depends_on:
       - db
+
+  cache:
+    image: redis:6.2-alpine
+    container_name: best_travel_cache
+    restart: always
+    ports:
+    - "6379:6379"
+    command: redis-server --loglevel warning --requirepass 1297
