se crea base de datos mongo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,10 @@ spring.mail.username=mateocastro1297@gmail.com
 spring.mail.password=qarlntfgbnutehqj
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=app_users
+spring.data.mongodb.username=master
+spring.data.mongodb.password=mateoprueba1297
