--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 
 spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
+spring.data.mongodb.port=27018
 spring.data.mongodb.database=app_users
 spring.data.mongodb.username=master
-spring.data.mongodb.password=mateoprueba1297
+spring.data.mongodb.password=1297
