--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,10 @@
             <artifactId>spring-security-oauth2-resource-server</artifactId>
             <version>6.1.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
